--- a/les01BasicSetupOrcDbOnDocker/docker-compose.yml
+++ b/les01BasicSetupOrcDbOnDocker/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: container-registry.oracle.com/database/express:latest
     container_name: learn-oracle-db
     environment:
-      #- ORACLE_ID=ORCL01 # Oracle system identifier (SID)
+      - ORACLE_ID=ORCL01 # Oracle system identifier (SID)
       - ORACLE_PWD=12345678@Abc  # SYS and SYSTEM user password
       - ORACLE_ALLOW_REMOTE=true     # Allow remote connections
     ports:
